# project-copilot

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml
.ai/: DECISIONS.md  HYPOTHESES.md  KNOWLEDGE.md  MEMORY.md  PROJECT_CHARTER.md  PROJECT_CONTEXT.md  ROADMAP.md  STATUS.md  USER_PROFILE.md  WORKFLOW.md  WORKLOG.md  metrics.md  validation.json
.ai/adr/: 0001-codex-project-memory-layer.md  0002-session-memory-model.md  0003-adr-first-decisions.md  0004-validation-refresh-policy.md  0005-p0-memory-architecture-review.md  0006-memory-view-convergence.md  0007-memory-governance-and-drift-detection.md  0008-validation-snapshot-lifecycle.md  index.md
.ai/derived/: metrics.json
.ai/history/: 2026-06.md  review-2026-06-17-1027.md
.ai/release/: v0.3.0-alpha.2.md  v0.3.0-alpha.3.md  v0.3.0-alpha.4.md  v0.3.0-alpha.5.md  v0.3.0-alpha.6.md  v0.3.0-alpha.7.md  v0.3.0-alpha.8.md  v0.3.0-alpha.9.md  v0.3.0-beta.1.md  v0.3.0-beta.2.md  v0.3.0-beta.3.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md
.ai/sessions/: current.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  topics.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+3 more)
docs/: ARCHITECTURE.md  CODEX_FOR_OPEN_SOURCE.md  CODEX_WORKFLOW.md  INSTALL_WINDOWS.md  OSS_READINESS.md  PRD.md  USAGE.md  architecture.mmd  case-study-ai-recruitment.md  codex-for-oss-application.md  demo-script.md  oss-audit-report.md  validation-report.md
project_copilot/: __init__.py  secretary.py
tests/: test_cli.py  test_codex_native_integration.py  test_intent.py  test_release_project.py  test_sprint3_minimal_loop.py  test_validation_governance.py  test_validation_snapshot.py  test_workflow.py  test_workflow_engine.py
validation/: sources.yaml
(+51 files in other folders)
