[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "project-copilot"
version = "0.3.0a7"
description = "Project secretary for Codex projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Project Copilot Contributors" }]
dependencies = []

[project.scripts]
project-copilot = "project_copilot.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["project_copilot"]
