[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "project-copilot"
version = "0.3.3"
description = "Persistent project memory for Codex."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Project Copilot Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
project-copilot = "project_copilot.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["project_copilot"]

[tool.coverage.run]
branch = true
source = ["project_copilot"]

[tool.coverage.report]
show_missing = true
skip_empty = true
